plugins {
    id 'java'
    id 'maven-publish'
    id 'org.sonarqube' version "3.5.0.2730"
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.springframework:spring-core:5.3.22'
    compileOnly 'org.springframework:spring-beans:5.3.22'
    compileOnly 'org.springframework:spring-context:6.0.9'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation('org.apache.httpcomponents:httpclient:4.5.13') {
        exclude group: 'commons-codec', module: 'commons-codec'
    }
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'org.testcontainers:testcontainers:1.17.6'
    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
    testImplementation('org.springframework.boot:spring-boot-starter-test:3.1.0') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }
        resources {
            srcDirs = ["src/main/resources"]
        }
    }

    test {
        java {
            srcDirs = ["src/test/java"]
        }
        resources {
            srcDirs = ["src/test/resources"]
        }
    }
}

group = 'org.connector'
description = 'CouchDBConnector'
sourceCompatibility = JavaVersion.VERSION_19

test {
    environment("INTEGRATION_DB": true)
    environment("TEST_CONTAINER_DB": false)
    environment("COUCH_DB_HOST": "localhost")
    environment("COUCH_DB_PORT": 5984)
    environment("COUCH_DB_USER": "admin")
    environment("COUCH_DB_PASS": "admin")
    environment("COUCH_DB_NAME": "itest-db")
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}